# xia4idsTraces

./: .gitignore  CMakeLists.txt  Makefile  README.md  writeConfig.ipynb
cmake/: dependencies.cmake  install_targets.cmake  target_definitions.cmake  xia4idsConfig.cmake.in
inc/: BufferInfo.h  LDFReader.h  Trace.hh  Unpacker.h  XiaData.h  XiaListModeDataMask.h  correlations.hh  dcfd.hh  dcfdPixie.h  dcfdSliding.h  define_root.hh  dig_daq_param.hh  event_builder.hh  event_builder_tree.hh  globals.h  go4pixieUnpacker.h  main.h  polyCfd.hh  read_config.hh  read_dig_daq_params.hh  read_ldf.hh  xia4ids.hh
src/: BufferInfo.cpp  LDFReader.cpp  Trace.cpp  Unpacker.cpp  XiaData.cpp  dcfd.cpp  dcfdPixie.cpp  dcfdSliding.cpp  dig_daq_param.cpp  go4pixieUnpacker.cpp  main.cpp  polyCfd.cpp  xia4ids.cpp
src/exec/: go4pixie.cpp  main.cpp
src/xia4idsMethods/: calibrate.cpp  correlations.cpp  define_ausa.cpp  define_root.cpp  event_builder.cpp  event_builder_ausa.cpp  event_builder_list.cpp  event_builder_tree.cpp  event_builder_tree.test  merge.cpp  read_cal.cpp  read_config.cpp  read_dig_daq_params.cpp  read_ldf.cpp  write_correlations.cpp  write_gasp.cpp  write_list.cpp  write_stats.cpp  write_time.cpp
